tests/semantic_errors/invalid_type_name.snl
program invalidTypeName
var missing x;
begin
    write(x)
end.
